<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_scan"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_scan"/>
    <item
        android:id="@+id/menu_stream"
        android:icon="@drawable/bluetooth"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_stream"/>
    <item
        android:id="@+id/menu_viewsensor"
        android:icon="@android:drawable/ic_menu_gallery"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_viewsensor"/>
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    <item
        android:id="@+id/menu_commands"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_commands"/>
    <item
        android:id="@+id/menu_logfile"
        android:icon="@android:drawable/ic_menu_save"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_logfile"/>
    <item
        android:id="@+id/menu_process"
        android:icon="@drawable/process"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_process"/>


</menu>